--- a/src/App.scss
+++ b/src/App.scss
@@ -9,10 +9,12 @@
   padding: 16px;
   box-sizing: border-box;
   flex-grow: 1;
-  border: 2px solid gray;
+  border: 1px solid rgb(187, 187, 187);
+  border-radius: 5px;
 }
 
 .outer-container {
+  background-color: #f5f5f5;
   display: flex;
   height: 100vh;
   flex-direction: column;
@@ -47,6 +49,7 @@
 #preview-container {
   @extend %area;
   #preview {
+    background-color: white;
     @extend %text-area;
   }
 }
@@ -63,7 +66,7 @@
 #btn-toggle {
   margin-left: 16px;
   align-self: center;
-} 
+}
 
 #btn-toggle-pr {
   border: none;
