--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,10 @@
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  height: 50vh;
   border: 1px solid #bbbbbb;
   border-radius: 5px;
+  overflow-wrap: break-word;
 }
 
 .outer-container {
@@ -64,7 +66,7 @@
 
 #editor-container textarea {
   display: block;
-  overflow: auto;
+  overflow-y: auto;
   resize: none;
 }
 
@@ -92,6 +94,7 @@
 }
 
 #btn-toggle {
+  display: inline-block;
   margin-left: 16px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
