--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,13 @@
       -ms-flex-positive: 1;
           flex-grow: 1;
   height: 50vh;
-  border: 1px solid #bbbbbb;
+  border: 2px solid black;
   border-radius: 5px;
   overflow-wrap: break-word;
 }
 
 .outer-container {
-  background-color: #f5f5f5;
+  background: url("http://api.thumbr.it/whitenoise-361x370.png?background=d7f7f3ff&noise=cccccc&density=25&opacity=10");
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -61,7 +61,7 @@
 #title {
   margin: 16px auto;
   font-size: 1.4em;
-  color: #a5a5a5;
+  color: #605d74;
 }
 
 #editor-container textarea {
@@ -87,7 +87,7 @@
 
 .group-toggle h2 {
   font-size: 1.2em;
-  color: #636363;
+  color: #605d74;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
