--- a/src/App.css
+++ b/src/App.css
@@ -86,11 +86,33 @@
 }
 
 .group-toggle h2 {
-  font-size: 1.2em;
+  font-size: 1.3em;
   color: #605d74;
+}
+
+.group-toggle h2 + div {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.group-toggle h2 + div > button {
+  border: 1px solid #605d74;
+  background-color: transparent;
+  padding: 4px;
+  margin-left: 16px;
+}
+
+.group-toggle h2 + div > button:hover,
+.group-toggle h2 + div > button:active {
+  background-color: #dddddf;
+}
+
+.group-toggle h2 + div img {
+  width: 1em;
 }
 
 #btn-toggle {
@@ -108,8 +130,7 @@
 }
 
 #btn-toggle-pr:hover, #btn-toggle-pr:active {
-  background-color: #605d74;
-  color: white;
+  background-color: #dddddf;
 }
 
 @media (min-width: 720px) {
