--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 $gray-color: #605d74;
-$light-gray: rgb(221, 221, 223);
+$light-gray: #dddddf;
 %area {
   display: flex;
   flex-grow: 1;
@@ -70,7 +70,6 @@ $light-gray: rgb(221, 221, 223);
     color: $gray-color;
   }
   h2 + div {
-    flex-grow: 1;
     align-self: center;
     & > button {
       border: 1px solid $gray-color;
@@ -82,10 +81,109 @@ $light-gray: rgb(221, 221, 223);
     & > button:active {
       background-color: $light-gray;
     }
-    img {
-      width: 1em;
-    }
   }
+  .svg-helper {
+    width: 1.6em;
+    margin-left: 1.5em;
+    filter: invert(38%) sepia(22%) saturate(383%) hue-rotate(208deg)
+      brightness(90%) contrast(90%);
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+  }
+  #btn-toggle {
+    margin-left: auto;
+  }
+}
+
+.svg-icon {
+  width: 1.2em;
+}
+
+.bounce {
+  animation-name: bounce-6;
+  animation-timing-function: ease;
+}
+
+@keyframes bounce-6 {
+  0% {
+    transform: scale(1, 1) translateY(0);
+  }
+  10% {
+    transform: scale(1.1, 0.9) translateY(0);
+  }
+  30% {
+    transform: scale(0.9, 1.1) translateY(-10px);
+  }
+  50% {
+    transform: scale(1.05, 0.95) translateY(0);
+  }
+  57% {
+    transform: scale(1, 1) translateY(-3px);
+  }
+  64% {
+    transform: scale(1, 1) translateY(0);
+  }
+  100% {
+    transform: scale(1, 1) translateY(0);
+  }
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 #btn-toggle {
